Fix text body not overruling dark mode properly

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -7,7 +7,7 @@
   }
 
   .text-body {
-    color: $dark-mode-text;
+    color: $dark-mode-text!important;
   }
 
   .card,
